Organizando e estilizando o cabecalho e a navegacao das 5 paginas do meu site, e conectando elas

--- a/servicos.html
+++ b/servicos.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Pousada Atena Praia</title>
+    <title>Serviços - Pousada Atena Praia</title>
     <!--CSS EXTERNO-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/servicos.css">
 </head>
 <body>
     <div class="container">
@@ -25,7 +25,7 @@
             <a href="acomodacao.html">Acomodações</a>
             <a href="servicos.html">Serviços</a>
             <a href="galeria.html">Galeria</a>
-            <a href="contatos.htmlq">Contatos</a>
+            <a href="contatos.html">Contatos</a>
         </div>
 
         <div class="item3">Item 3</div>
