Organizando e finalizando a pagina principal

--- a/contatos.html
+++ b/contatos.html
@@ -25,7 +25,7 @@
             <a href="acomodacao.html">Acomodações</a>
             <a href="servicos.html">Serviços</a>
             <a href="galeria.html">Galeria</a>
-            <a href="contatos.html">Contatos</a>
+            <a href="contatos.html" id="selecionado">Contatos</a>
         </div>
 
         <div class="item3">Item 3</div>
