--- a/index.html
+++ b/index.html
@@ -16,23 +16,61 @@
                 </a>
             </div>
             <div class="cabecalho">
-                <h1>Pousada Atena Praia</h1>
+                <h1>Pousada Atena Praia</h1> 
             </div>
         </div>
 
         <div class="navegacao">
-            <a href="index.html">Home</a>
+            <a href="index.html" id="selecionado">Home</a>
             <a href="acomodacao.html">Acomodações</a>
             <a href="servicos.html">Serviços</a>
             <a href="galeria.html">Galeria</a>
-            <a href="contatos.htmlq">Contatos</a>
+            <a href="contatos.html">Contatos</a>
         </div>
 
-        <div class="item3">Item 3</div>
-        <div class="item4">Item 4</div>
-        <div class="item5">Item 5</div>
-        <div class="item6">Item 6</div>
-        <div class="item7">Item 7</div>
+        <div class="sobre">
+            <h2>Sobre a Pousada</h2>
+            <p><strong>Pousada Atena Praia</strong> possui internamente ambientes alegres e decorados com muito bom gosto e requinte. Aqui você e sua família poderão desfrutar de momentos de prazer e descontração; sem abrir mão do conforto e da infraestrutura de serviços oferecidos.</p>
+        </div>
+
+        <div class="localizacao">
+            <h2>Localização</h2>
+            <p>Rua Sargento Filisbino Teodoro da Silva, 85, Boiçucanga, CEP 12345-123, Brasil</p>
+            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.9738343912804!2d-45.63029192501265!3d-23.783946069806717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d27fbc98353bc9%3A0x12aa040fb865996!2sAtena%20Praia%20Hotel!5e0!3m2!1spt-BR!2sbr!4v1716571321211!5m2!1spt-BR!2sbr" width="545" height="385" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h3>Principais Atrações Próximas:</h3>
+            <p class="proxima">>> 15 metros da Praia de Boiçucanga.</p>
+            <p class="proxima">>> 1Km da Estação Rodoviária de Boiçucanga.</p>
+            <p class="proxima">>> 3 Km da Cachoeira do Ribeirão do Itu.</p>
+        </div>
+
+        <div class="imagens">
+            <img src="img/atena-frente.png" alt="Frente Pousada">
+            <img src="img/atena-escadaria.png" alt="Pousada Escadaria">
+            <img src="img/atena-noite.png" alt="Pousada Noite">
+            <img src="img/vista-atena.png" alt="Pousada Vista">
+            <img src="img/atenaquarto-home.png" alt="Pousada Quarto">
+            <img src="img/atena-lobby.png" alt="Pousada Lobby">
+        </div>
+
+        <div class="prservicos">
+            <h2>Principais Serviços</h2>
+            <ul class="parteum">
+              <li>Piscina ao ar Livre</li>
+              <li>Beira-Mar</li>
+              <li>Wi-fi Gratuito</li>
+              <li>Spa</li>
+            </ul>
+            <ul class="partedois">
+              <li>Estacionamento Gratuito</li>
+              <li>Restaurante</li>
+              <li>Recreação</li>
+              <p>E muito mais!</p>
+            </ul>
+          </div>
+          
+        <div class="rodape">
+            <p>Checkpoint 3 - 1ESPG -> Renan Dias Utida</p>
+        </div>
     </div>
 </body>
 </html>
