--- a/servicos.html
+++ b/servicos.html
@@ -23,7 +23,7 @@
         <div class="navegacao">
             <a href="index.html">Home</a>
             <a href="acomodacao.html">Acomodações</a>
-            <a href="servicos.html">Serviços</a>
+            <a href="servicos.html" id="selecionado">Serviços</a>
             <a href="galeria.html">Galeria</a>
             <a href="contatos.html">Contatos</a>
         </div>
