--- a/acomodacao.html
+++ b/acomodacao.html
@@ -22,7 +22,7 @@
 
         <div class="navegacao">
             <a href="index.html">Home</a>
-            <a href="acomodacao.html">Acomodações</a>
+            <a href="acomodacao.html" id="selecionado">Acomodações</a>
             <a href="servicos.html">Serviços</a>
             <a href="galeria.html">Galeria</a>
             <a href="contatos.html">Contatos</a>
