--- a/galeria.html
+++ b/galeria.html
@@ -24,7 +24,7 @@
             <a href="index.html">Home</a>
             <a href="acomodacao.html">Acomodações</a>
             <a href="servicos.html">Serviços</a>
-            <a href="galeria.html">Galeria</a>
+            <a href="galeria.html" id="selecionado">Galeria</a>
             <a href="contatos.html">Contatos</a>
         </div>
 
