Estilizando e finalizando a pagina de acomodacoes

--- a/acomodacao.html
+++ b/acomodacao.html
@@ -28,11 +28,67 @@
             <a href="contatos.html">Contatos</a>
         </div>
 
-        <div class="item3">Item 3</div>
-        <div class="item4">Item 4</div>
-        <div class="item5">Item 5</div>
-        <div class="item6">Item 6</div>
-        <div class="item7">Item 7</div>
+        <div class="titulo">
+            <h2>Acomodações da Pousada</h2>
+        </div>
+
+        <div class="todos-quartos">
+            <div class="quarto1">
+                <h3>Quarto Boiçucanga</h3>
+                <img src="img/acomodacao-boicucanga.png" alt="Quarto Boiçucanga">
+                <div class="info1">
+                    <p>Suíte com 1 cama de casal para até 2 pessoas.</p>
+                    <ul>
+                        <li>Televisão;</li>
+                        <li>Secador;</li>
+                        <li>Apenas Café da Manhã incluso.</li>
+                    </ul>
+                </div>
+                <div class="preco1">
+                    <p>R$300,00/dia</p>
+                </div>
+            </div>
+
+            <div class="quarto2">
+                <h3>Quarto Beira-Mar</h3>
+                <img src="img/acomodacao-beiramar.png" alt="Quarto Beira-Mar">
+                <div class="info2">
+                    <p>Suíte com 1 cama de casal e 1 de solteiro para até 3 pessoas.</p>
+                    <ul>
+                        <li>Televisão;</li>
+                        <li>Secador;</li>
+                        <li>Ar condicionado;</li>
+                        <li>Banheira</li>
+                        <li>Apenas Café da Manhã e Almoço incluso.</li>
+                    </ul>
+                </div>
+                <div class="preco2">
+                    <p>R$600,00/dia</p>
+                </div>
+            </div>
+
+            <div class="quarto3">
+                <h3>Quarto Atena</h3>
+                <img src="img/acomodacao-atena.png" alt="Quarto Atena">
+                <div class="info3">
+                    <p>Suíte com 1 cama de casal e 2 de  solteiro para até 4 pessoas.</p>
+                    <ul>
+                        <li>Televisão;</li>
+                        <li>Secador;</li>
+                        <li>Ar condicionado;</li>
+                        <li>Banheira</li>
+                        <li>Quarto com vista para o mar;</li>
+                        <li>Todas as refeições inclusas.</li>
+                    </ul>
+                </div>
+                <div class="preco3">
+                    <p>R$900,00/dia</p>
+                </div>
+            </div>
+        </div>
+        <div class="rodape">
+            <p>Checkpoint 3 - 1ESPG -> Renan Dias Utida</p>
+        </div>
     </div>
 </body>
 </html>
