--- a/servicos.html
+++ b/servicos.html
@@ -28,6 +28,10 @@
             <a href="contatos.html">Contatos</a>
         </div>
 
+        <div class="titulo">
+            <h2>Acomodações da Pousada</h2>
+        </div>
+
         <div class="item3">Item 3</div>
         <div class="item4">Item 4</div>
         <div class="item5">Item 5</div>
