Estilizando, organizando e finalizando a pagina de servicos

--- a/servicos.html
+++ b/servicos.html
@@ -29,14 +29,51 @@
         </div>
 
         <div class="titulo">
-            <h2>Acomodações da Pousada</h2>
+            <h2>Principais Serviços Disponibilizados</h2>
         </div>
 
-        <div class="item3">Item 3</div>
-        <div class="item4">Item 4</div>
-        <div class="item5">Item 5</div>
-        <div class="item6">Item 6</div>
-        <div class="item7">Item 7</div>
+        <div class="imagens">
+            <div class="imagem-com-legenda">
+                <img src="img/servico-spa.png" alt="SPA">
+                <div class="legenda">Spa</div>
+            </div>
+            <div class="imagem-com-legenda">
+                <img src="img/quiosque.png" alt="Quiosque">
+                <div class="legenda">Quiosque</div>
+            </div>
+            <div class="imagem-com-legenda">
+                <img src="img/restaurante.png" alt="Restaurante">
+                <div class="legenda">Restaurante</div>
+            </div>
+            <div class="imagem-com-legenda">
+                <img src="img/piscina.png" alt="Piscina">
+                <div class="legenda">Piscina</div>
+            </div>
+            <div class="imagem-com-legenda">
+                <img src="img/recreacao.png" alt="Recreação">
+                <div class="legenda">Recreação</div>
+            </div>
+            <div class="imagem-com-legenda">
+                <img src="img/quadras.png" alt="Quadras">
+                <div class="legenda">Quadras</div>
+            </div>
+            <div class="imagem-com-legenda">
+                <img src="img/biblioteca.png" alt="Biblioteca">
+                <div class="legenda">Biblioteca</div>
+            </div>
+            <div class="imagem-com-legenda">
+                <img src="img/academia.png" alt="Academia">
+                <div class="legenda">Academia</div>
+            </div>
+            <div class="imagem-com-legenda">
+                <img src="img/fitdance.png" alt="Fitdance">
+                <div class="legenda">Fitdance</div>
+            </div>
+        </div>
+
+        <div class="rodape">
+            <p>Checkpoint 3 - 1ESPG -> Renan Dias Utida</p>
+        </div>
     </div>
 </body>
 </html>
