Estilizacao e organizacao da pagina de Galeria

--- a/galeria.html
+++ b/galeria.html
@@ -28,11 +28,32 @@
             <a href="contatos.html">Contatos</a>
         </div>
 
-        <div class="item3">Item 3</div>
-        <div class="item4">Item 4</div>
-        <div class="item5">Item 5</div>
-        <div class="item6">Item 6</div>
-        <div class="item7">Item 7</div>
+        <div class="titulo">
+            <h2>Imagens da nossa Pousada</h2>
+        </div>
+
+        <div class="imagens">
+            <img src="img/galeria-cafe.png" alt="Cafe da Manha">
+            <img src="img/galeria-bolo.png" alt="Bolo">
+            <img src="img/galeria-escadas.png" alt="Escada">
+            <img src="img/galeria-praia.png" alt="Praia">
+            <img src="img/galeria-tenisdemesa.png" alt="Tenis de Mesa">
+            <img src="img/galeria-salaodejogos.png" alt="Salao de Jogos">
+            <img src="img/galeria-hidro.png" alt="Hidromassagem">
+            <img src="img/quiosque.png" alt="Quiosque">
+            <img src="img/galeria-lobby.png" alt="Lobby">
+            <img src="img/galeria-salalazer.png" alt="Sala de Lazer">
+            <img src="img/galeria-entrada.png" alt="Entrada">
+            <img src="img/galeria-piscina.png" alt="Piscina">
+            <img src="img/restaurante.png" alt="Restaurante">
+            <img src="img/galeria-porcao.png" alt="Porcao">
+            <img src="img/galeria-expresso.png" alt="Cafe Expresso">
+            <img src="img/galeria-barzinho.png" alt="Pequeno Bar">
+        </div>
+
+        <div class="rodape">
+            <p>Checkpoint 3 - 1ESPG -> Renan Dias Utida</p>
+        </div>
     </div>
 </body>
 </html>
